--- a/index.html
+++ b/index.html
@@ -52,6 +52,28 @@
                 </div>
             </div>
         </header>
+        <div class="container" center-text>
+            <h2>Carrito de compras</h2>
+            <hr>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Item</th>
+                  <th scope="col">Cantidad</th>
+                  <th scope="col">Acción</th>
+                  <th scope="col">Total</th>
+                </tr>
+              </thead>
+              <tbody id="items"></tbody>
+              <tfoot>
+                <tr id="footer">
+                  <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
+                </tr>
+              </tfoot>
+            </table>
+            <div class="row" id="cards"></div>
+        </div>
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
@@ -64,6 +86,34 @@
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; CaC 2022</p></div>
         </footer>
+
+        <template id="template-footer">
+            <th scope="row" colspan="2">Total productos</th>
+            <td>10</td>
+            <td>
+                <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+                    vaciar todo
+                </button>
+            </td>
+            <td class="font-weight-bold">$ <span>5000</span></td>
+        </template>
+
+        <template id="template-carrito">
+            <tr>
+              <th scope="row">id</th>
+              <td>Café</td>
+              <td>1</td>
+              <td>
+                  <button class="btn btn-info btn-sm">
+                      +
+                  </button>
+                  <button class="btn btn-danger btn-sm">
+                      -
+                  </button>
+              </td>
+              <td>$ <span>500</span></td>
+            </tr>
+          </template>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
@@ -72,5 +122,8 @@
         <script src="js/data.js"></script>
         <!-- Lógica propia-->
         <script src="js/logica.js"></script>
+
+        
+
     </body>
 </html>
